--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "micropython"]
 	path = micropython
 	url = https://github.com/micropython/micropython.git
+[submodule "modules/usqlite"]
+	path = modules/usqlite
+	url = https://github.com/spatialdude/usqlite.git
